# SPDX-FileCopyrightText: 2025 2025 Contributors to the Media eXchange Layer project.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "mxl-proc-macro"
edition.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
mxl-sys = { path = "../mxl-sys", features = ["mxl-not-built"] }
